quick fix to wrapping issue

--- a/css/angular.css
+++ b/css/angular.css
@@ -8410,6 +8410,8 @@ a#myuw-header img {
 .sidebar {
   margin-left: 5px;
   margin-top: 11px;
+  padding-top: 10px;
+  width: 12em;
 }
 .side-bar-menu .list-group li.list-group-item:hover {
   position: relative;
