--- a/css/buckyless/sidebar.less
+++ b/css/buckyless/sidebar.less
@@ -62,6 +62,8 @@
  .sidebar {
    margin-left:5px;
    margin-top:11px;
+   padding-top:10px;
+   width:12em;
  }
 
 .side-bar-menu .list-group li.list-group-item:hover {
